objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>PRUFTECHNIK Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Solution Selling Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>InActive</fullName>
        </values>
        <values>
            <fullName>S0 Territory</fullName>
        </values>
        <values>
            <fullName>S1 Suspect</fullName>
        </values>
        <values>
            <fullName>S2 Advocate</fullName>
        </values>
        <values>
            <fullName>S3 Power Advocate</fullName>
        </values>
        <values>
            <fullName>S4 Proof Accepted</fullName>
        </values>
        <values>
            <fullName>S5 Cost Accepted</fullName>
        </values>
        <values>
            <fullName>S6A Verbal Approval</fullName>
        </values>
        <values>
            <fullName>S6B Awaiting Response</fullName>
        </values>
        <values>
            <fullName>S7</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADM_refresh_value__c</fullName>
        <label>ADM_refresh_value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_approvals_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Administrative approvals complete.</inlineHelpText>
        <label>Administrative approvals complete.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advocate_does_not_meet_criteria_for_pow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Advocate does not meet criteria for “power”.</inlineHelpText>
        <label>Does not meet criteria for “power”.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advocate_email_sent_reviewed_and_agree__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Advocate email sent, reviewed and agreed to by Advocate.</inlineHelpText>
        <label>Advocate email sent/reviewed/agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Agreement submitted.</inlineHelpText>
        <label>Agreement submitted.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <description>The Field is using for forecasting and measure Win rate for Opportunities Values.</description>
        <formula>IF(IsWon = True,Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asked_for_business_but_verbal_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Asked for business, but verbal approval denied.</inlineHelpText>
        <label>Asked for business, verbal apprv denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asked_for_business_got_verbal_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Asked for business, received verbal approval.</inlineHelpText>
        <label>Asked for business, got verbal approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Awaiting response.</inlineHelpText>
        <label>Awaiting response.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balanced_Pipeline_Objective__c</fullName>
        <formula>Owner.Balanced_Pipeline_Objective__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balanced Pipeline Objective</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commits_to_introduce_seller_to_power__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Advocate Commits to introduce seller to &quot;power&quot;.</inlineHelpText>
        <label>Commits to introduce seller to &quot;power&quot;.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commits_to_take_serious_look_at_our_C_A__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Advocate commits to take serious look at our company.</inlineHelpText>
        <label>Commits to take serious look at our C. A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commits_to_take_serious_look_at_our_Comp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Power Advocate commits to take serious look at our Company.</inlineHelpText>
        <label>Commits to take serious look at our Comp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Agreed_Advocate_seller__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Concept of solution agreed to by Advocate &amp; seller.</inlineHelpText>
        <label>Concept Agreed - Advocate &amp; seller.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Agreed_Power_Ad_seller__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Concept of solution agreed to by Power Advocate &amp; seller.</inlineHelpText>
        <label>Concept Agreed - Power Ad. &amp; seller.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_submitted_to_prospect__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <defaultValue>false</defaultValue>
        <inlineHelpText>XContract submitted to prospect.</inlineHelpText>
        <label>XContract submitted to prospect.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_S0__c</fullName>
        <formula>ISPICKVAL( StageName , &quot;S0 Territory&quot;)
&amp;&amp;
Re_Qualified__c == False</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created S0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Number__c</fullName>
        <label>Credit Note Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Pipeline_Amount__c</fullName>
        <description>Calculated Current Pipeline Amount for reporting. Includes Win amounts in the current month plus Expected Revenue of all open Opps</description>
        <formula>IF(AND(NOT(IsClosed),NOT(ISPICKVAL( StageName,&quot;S7&quot;))),
ExpectedRevenue,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <summarizedField>OpportunityLineItem.Discount_Amount__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Draft_proposal_with_fees_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Draft proposal with fees submitted.</inlineHelpText>
        <label>Draft proposal with fees submitted.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dummy_Field__c</fullName>
        <label>Dummy Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Invoice_date__c</fullName>
        <description>Expected date for Invoice.</description>
        <inlineHelpText>Expected date for Invoice.</inlineHelpText>
        <label>Expected Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees_reviewed_and_agreed_to__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fees reviewed and agreed to.</inlineHelpText>
        <label>Fees reviewed and agreed to.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_negotiation_in_process__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Final negotiation in process.</inlineHelpText>
        <label>Final negotiation in process.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month_in_Year_CloseDate__c</fullName>
        <description>Close Date is used.</description>
        <formula>Case(
FLOOR( ( CloseDate - DATE( YEAR( CloseDate),1,1) +
MOD( DATE(YEAR(CloseDate),1,1) - DATE(2011, 1, 1), 7) ) / 7) + 1,
1, &quot;01 Jan FM&quot;,
2, &quot;01 Jan FM&quot;,
3, &quot;01 Jan FM&quot;,
4, &quot;01 Jan FM&quot;,
5, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;02 Feb FM&quot;,&quot;01 Jan FM&quot;),
6, &quot;02 Feb FM&quot;,
7, &quot;02 Feb FM&quot;,
8, &quot;02 Feb FM&quot;,
9, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;03 Mar FM&quot;,&quot;02 Feb FM&quot;),
10, &quot;03 Mar FM&quot;,
11, &quot;03 Mar FM&quot;,
12, &quot;03 Mar FM&quot;,
13, &quot;03 Mar FM&quot;,
14, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;04 Apr FM&quot;,&quot;03 Mar FM&quot;),
15, &quot;04 Apr FM&quot;,
16, &quot;04 Apr FM&quot;,
17, &quot;04 Apr FM&quot;,
18, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;05 May FM&quot;,&quot;04 Apr FM&quot;),
19, &quot;05 May FM&quot;,
20, &quot;05 May FM&quot;,
21, &quot;05 May FM&quot;,
22, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;06 Jun FM&quot;,&quot;05 May FM&quot;),
23, &quot;06 Jun FM&quot;,
24, &quot;06 Jun FM&quot;,
25, &quot;06 Jun FM&quot;,
26, &quot;06 Jun FM&quot;,
27, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;07 Jul FM&quot;,&quot;06 Jun FM&quot;),
28, &quot;07 Jul FM&quot;,
29, &quot;07 Jul FM&quot;,
30, &quot;07 Jul FM&quot;,
31, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;08 Aug FM&quot;,&quot;07 Jul FM&quot;),
32, &quot;08 Aug FM&quot;,
33, &quot;08 Aug FM&quot;,
34, &quot;08 Aug FM&quot;,
35, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;09 Sep FM&quot;,&quot;08 Aug FM&quot;),
36, &quot;09 Sep FM&quot;,
37, &quot;09 Sep FM&quot;,
38, &quot;09 Sep FM&quot;,
39, &quot;09 Sep FM&quot;,
40, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;10 Oct FM&quot;,&quot;09 Sep FM&quot;),
41, &quot;10 Oct FM&quot;,
42, &quot;10 Oct FM&quot;,
43, &quot;10 Oct FM&quot;,
44, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;11 Nov FM&quot;,&quot;10 Oct FM&quot;),
45, &quot;11 Nov FM&quot;,
46, &quot;11 Nov FM&quot;,
47, &quot;11 Nov FM&quot;,
48, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;12 Dec FM&quot;,&quot;11 Nov FM&quot;),
49, &quot;12 Dec FM&quot;,
50, &quot;12 Dec FM&quot;,
51, &quot;12 Dec FM&quot;,
52, &quot;12 Dec FM&quot;,
53, &quot;12 Dec FM&quot;,
&quot;12 Dec FM&quot;)</formula>
        <inlineHelpText>Close Date is used.</inlineHelpText>
        <label>Fiscal Month in Year (CloseDate)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month_in_Year_CreatedDate__c</fullName>
        <formula>Case(
FLOOR( (  DATEVALUE(CreatedDate) - DATE(YEAR(DATEVALUE(CreatedDate)),1,1) +
MOD( DATE(YEAR(DATEVALUE(CreatedDate)),1,1) - DATE(2011, 1, 1), 7) ) / 7) + 1,
1, &quot;01 Jan FM&quot;,
2, &quot;01 Jan FM&quot;,
3, &quot;01 Jan FM&quot;,
4, &quot;01 Jan FM&quot;,
5, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;02 Feb FM&quot;,&quot;01 Jan FM&quot;), 
6, &quot;02 Feb FM&quot;,
7, &quot;02 Feb FM&quot;,
8, &quot;02 Feb FM&quot;,
9, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;03 Mar FM&quot;,&quot;02 Feb FM&quot;), 
10, &quot;03 Mar FM&quot;,
11, &quot;03 Mar FM&quot;,
12, &quot;03 Mar FM&quot;,
13, &quot;03 Mar FM&quot;,
14, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;04 Apr FM&quot;,&quot;03 Mar FM&quot;), 
15, &quot;04 Apr FM&quot;,
16, &quot;04 Apr FM&quot;,
17, &quot;04 Apr FM&quot;,
18, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;05 May FM&quot;,&quot;04 Apr FM&quot;),
19, &quot;05 May FM&quot;,
20, &quot;05 May FM&quot;,
21, &quot;05 May FM&quot;,
22, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;06 Jun FM&quot;,&quot;05 May FM&quot;), 
23, &quot;06 Jun FM&quot;,
24, &quot;06 Jun FM&quot;,
25, &quot;06 Jun FM&quot;,
26, &quot;06 Jun FM&quot;,
27, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;07 Jul FM&quot;,&quot;06 Jun FM&quot;), 
28, &quot;07 Jul FM&quot;,
29, &quot;07 Jul FM&quot;,
30, &quot;07 Jul FM&quot;,
31, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;08 Aug FM&quot;,&quot;07 Jul FM&quot;), 
32, &quot;08 Aug FM&quot;,
33, &quot;08 Aug FM&quot;,
34, &quot;08 Aug FM&quot;,
35, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;09 Sep FM&quot;,&quot;08 Aug FM&quot;),
36, &quot;09 Sep FM&quot;,
37, &quot;09 Sep FM&quot;,
38, &quot;09 Sep FM&quot;,
39, &quot;09 Sep FM&quot;,
40, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;10 Oct FM&quot;,&quot;09 Sep FM&quot;), 
41, &quot;10 Oct FM&quot;,
42, &quot;10 Oct FM&quot;,
43, &quot;10 Oct FM&quot;,
44, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;11 Nov FM&quot;,&quot;10 Oct FM&quot;), 
45, &quot;11 Nov FM&quot;,
46, &quot;11 Nov FM&quot;,
47, &quot;11 Nov FM&quot;,
48, IF( Fiscal_Year__c &lt;&gt;&quot;2021&quot;,&quot;12 Dec FM&quot;,&quot;11 Nov FM&quot;), 
49, &quot;12 Dec FM&quot;,
50, &quot;12 Dec FM&quot;,
51, &quot;12 Dec FM&quot;,
52, &quot;12 Dec FM&quot;,
53, &quot;12 Dec FM&quot;,
&quot;12 Dec FM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Month in Year (CreatedDate)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>TEXT(YEAR(CloseDate))</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generated_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is opportunity was generated from lead conversion</description>
        <label>Generated from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_plan_agreed_to__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Implementation plan agreed to.</inlineHelpText>
        <label>Implementation plan agreed to.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <formula>Account.Key_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_sales_process_step_s_missed_or_skip__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Key sales process step missed or skipped</inlineHelpText>
        <label>Key sales process step missed or skipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meets_our_company_marketing_criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Meets our company SQL (Sales Qualified Lead) criteria.</inlineHelpText>
        <label>Meets our company SQL criteria.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Project resulting from this opportunity will be an online project.</description>
        <label>Online Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Count__c</fullName>
        <description>Set to 1 if Opportunity is still open. Excludes all S1 Ops. Used for Reporting
Help Text</description>
        <formula>IF(
AND
(NOT(IsClosed),
NOT(ISPICKVAL(StageName, &quot;S0 Territory&quot;)),
NOT(ISPICKVAL(StageName, &quot;S7&quot;))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Opportunity Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Size__c</fullName>
        <description>Replicates the amount only while opportunity is still open - used for reporting</description>
        <formula>IF( IsClosed=FALSE, Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Opportunity Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Opportunity ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_name_unique__c</fullName>
        <description>Field contains unique name of opportunity based on Opportunity ID and Opportunity name.
Mostly used in reports.</description>
        <formula>Name &amp; &quot; &quot; &amp;  Id</formula>
        <label>Opportunity Name unique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outputs_number_of_months_left_in_current__c</fullName>
        <defaultValue>12-Month(Today())+
(
1-(DAY(TODAY())/
(IF(
MONTH(TODAY())=12,
DATE(YEAR(TODAY()),12,31)-TODAY(),
DATE(YEAR(TODAY()),MONTH(TODAY())+1,1)-TODAY()-1)+
DAY(TODAY())))
)</defaultValue>
        <description>Outputs number of months left in current year for reporting purposes</description>
        <label>Months Left in Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Business_Unit__c</fullName>
        <formula>TEXT(Owner.sf42_Business_Unit__c)</formula>
        <label>Owner Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Offer_number__c</fullName>
        <label>PL Offer number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_PL_Invoice_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pain_admitted_by_Advocate_diagnosed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pain admitted by Advocate &amp; diagnosed.</inlineHelpText>
        <label>Pain admitted by Advocate &amp; diagnosed.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pain_admitted_by_Power_Advocate_diagno__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pain admitted by Power Advocate &amp; diagnosed.</inlineHelpText>
        <label>Pain Admitted &amp; Diagnosed - Power Ad.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pain_or_goal_or_reasons_or_capabilities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pain or goal or reasons or capabilities identified.</inlineHelpText>
        <label>Pain/Goal/Reasons/Capability Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Suspect_agrees_to_follow_up_co__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Potential suspect agrees to follow up conversation as soon as possible.</inlineHelpText>
        <label>Agrees to Follow Up Convo within 14 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Advocate_agrees_to_verbal_Go_Forwa__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Power Advocate agrees to verbal Go Forward Plan.</inlineHelpText>
        <label>Agrees to verbal Go Forward Plan.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Advocate_email_with_Go_Forward_Pla__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>XPower Advocate email with Go Forward Plan sent, reviewed, and agreed to.</inlineHelpText>
        <label>XGo Forward Plan sent/reviewed/agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Advocate_meets_criteria_for_power__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Power Advocate meets criteria for “power”.</inlineHelpText>
        <label>Meets criteria for power.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probable_Amount__c</fullName>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALI - ALIGNMENT CENTER</fullName>
                </value>
                <value>
                    <fullName>ALI - CENTRALIGN Advanced</fullName>
                </value>
                <value>
                    <fullName>ALI - CENTRALIGN Expert</fullName>
                </value>
                <value>
                    <fullName>ALI - Demo Rig</fullName>
                </value>
                <value>
                    <fullName>ALI - GEOCenter</fullName>
                </value>
                <value>
                    <fullName>ALI - INCLINEO</fullName>
                </value>
                <value>
                    <fullName>ALI - LEVALIGN Expert</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN touch</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN touch</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN touch EX</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN Ultra Exp. Multicoupling</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN Ultra iS Exp. Live Trend</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN Ultra iS Exp. Multicoup.</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN Ultra Straightness</fullName>
                </value>
                <value>
                    <fullName>ALI - tab@lign</fullName>
                </value>
                <value>
                    <fullName>ALI - SHAFTALIGN OS3</fullName>
                </value>
                <value>
                    <fullName>ALI - SHAFTALIGN Touch</fullName>
                </value>
                <value>
                    <fullName>ALI - Z Accessories</fullName>
                </value>
                <value>
                    <fullName>ALI - Z EDDYTHERM 2x</fullName>
                </value>
                <value>
                    <fullName>ALI - Z EDDYTHERM 4x</fullName>
                </value>
                <value>
                    <fullName>ALI - Z EDDYTHERM Portable</fullName>
                </value>
                <value>
                    <fullName>ALI - Z PULLALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - Z Shims</fullName>
                </value>
                <value>
                    <fullName>ALI - Consulting Service</fullName>
                    <label>ALI - Consulting Service (S)</label>
                </value>
                <value>
                    <fullName>ALI - On-Site Alignment Service</fullName>
                    <label>ALI - On-Site Alignment Service (S)</label>
                </value>
                <value>
                    <fullName>ALI - Remote Alignment Service</fullName>
                    <label>ALI - Remote Alignment Service (S)</label>
                </value>
                <value>
                    <fullName>ALI - Remote Consulting Service</fullName>
                    <label>ALI - Remote Consulting Service (S)</label>
                </value>
                <value>
                    <fullName>ALI - Remote Training</fullName>
                    <label>ALI - Remote Training (S)</label>
                </value>
                <value>
                    <fullName>ALI - Rental</fullName>
                    <label>ALI - Rental (S)</label>
                </value>
                <value>
                    <fullName>ALI - Repair Service</fullName>
                    <label>ALI - Repair Service (S)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Proof Accepted - Key Stakeholders agree our solution will address their problem.</inlineHelpText>
        <label>Proof accepted.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <description>Budgeted Quota</description>
        <formula>Owner.Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Re_Qualified_Date__c</fullName>
        <label>Re-Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair</label>
        <referenceTo>Repair__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SG_Invoice_Value__c</fullName>
        <description>C-00008490 https://pruftechnik.my.salesforce.com/500D000000V7HHM</description>
        <formula>Amount * 1.07</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount + 7% tax. For Singapore.</inlineHelpText>
        <label>SG Invoice Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <formula>Amount + Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scope_of_services_agreed_to__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Scope of services agreed to.</inlineHelpText>
        <label>Scope of services agreed to.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sell_Cycle_Months__c</fullName>
        <description>Used for reporting purposes - takes sell cycle in months from the user record</description>
        <formula>Owner.Sell_Cycle_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Cycle Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Subcategory__c</fullName>
        <label>Service Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Balancing</fullName>
                </value>
                <value>
                    <fullName>Cloud Based Data Hosting</fullName>
                    <isActive>false</isActive>
                    <label>Cloud Based Data Hosting</label>
                </value>
                <value>
                    <fullName>CMMS Front End</fullName>
                    <isActive>false</isActive>
                    <label>CMMS Front End</label>
                </value>
                <value>
                    <fullName>Diagnostic</fullName>
                </value>
                <value>
                    <fullName>Geometry measurement</fullName>
                </value>
                <value>
                    <fullName>Mechanical load measurement</fullName>
                </value>
                <value>
                    <fullName>Modal analysis</fullName>
                    <isActive>false</isActive>
                    <label>Modal analysis</label>
                </value>
                <value>
                    <fullName>Monitoring Diagnostics</fullName>
                    <isActive>false</isActive>
                    <label>Monitoring Diagnostics</label>
                </value>
                <value>
                    <fullName>Motion amplification</fullName>
                    <isActive>false</isActive>
                    <label>Motion amplification</label>
                </value>
                <value>
                    <fullName>Online displacement measurement</fullName>
                </value>
                <value>
                    <fullName>On-line Particle monitoring</fullName>
                </value>
                <value>
                    <fullName>Particle counter</fullName>
                    <isActive>false</isActive>
                    <label>Particle counter</label>
                </value>
                <value>
                    <fullName>Remote Off-line monitoring</fullName>
                </value>
                <value>
                    <fullName>Remote On-line monitoring</fullName>
                </value>
                <value>
                    <fullName>Shaft Alignment</fullName>
                </value>
                <value>
                    <fullName>System analysis</fullName>
                </value>
                <value>
                    <fullName>Thermal Growth measurement</fullName>
                </value>
                <value>
                    <fullName>Torque</fullName>
                    <isActive>false</isActive>
                    <label>Torque</label>
                </value>
                <value>
                    <fullName>Trouble Shooting</fullName>
                    <isActive>false</isActive>
                    <label>Trouble Shooting</label>
                </value>
                <value>
                    <fullName>TTS - Temporary Telediagnosis Service</fullName>
                    <isActive>false</isActive>
                    <label>TTS - Temporary Telediagnosis Service</label>
                </value>
                <value>
                    <fullName>Vibration measurement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stakeholders_interviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All Relevant Key Stakeholders interviewed/buy in</inlineHelpText>
        <label>Relevant Key Stakeholders interviewed.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspect_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Summary of previous conversations email sent.</inlineHelpText>
        <label>Suspect email sent.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions_accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Terms &amp; Conditions accepted.</inlineHelpText>
        <label>Terms &amp; Conditions accepted.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YTD_Wins_Amount__c</fullName>
        <description>Calculates the YTD wins amount for reporting. Ignores previous/future years and only included Wins that occurred prior to current month</description>
        <formula>IF(OR(ISPICKVAL(StageName,&quot;Closed Won&quot;),ISPICKVAL(StageName,&quot;S7&quot;)),
IF(Year(CloseDate)=Year(Today()),
Amount,
0
),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Wins Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>br_Linha_de_Venda__c</fullName>
        <description>Define se a venda está relacionada à qual Produto ou se é Serviço.</description>
        <label>Departamentos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Produtos MGS</fullName>
                </value>
                <value>
                    <fullName>Produtos Pruftechnik</fullName>
                    <default>true</default>
                    <label>Produtos Pruftechnik</label>
                </value>
                <value>
                    <fullName>Serviços</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>